<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background"
    tools:context=".home.HomeFragment">

    <!-- HEADER -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textViewHeaderTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_16"
            android:text="@string/home_header_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageViewHeaderDog"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0" />

        <ImageView
            android:id="@+id/imageViewHeaderDog"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/dog_head_description"
            android:src="@drawable/img_dog_head"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textViewHeaderAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_4"
            android:text="@string/dog_app_title"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/imageViewHeaderDog"
            app:layout_constraintStart_toStartOf="@id/imageViewHeaderDog"
            app:layout_constraintEnd_toEndOf="@id/imageViewHeaderDog" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- LISTADO DE CITAS -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAppointments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="@dimen/spacing_8"
        android:paddingBottom="@dimen/spacing_8"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintBottom_toTopOf="@+id/fabAddAppointment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_appointment" />

    <TextView
        android:id="@+id/textViewEmptyList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_empty_list_message"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintBottom_toTopOf="@+id/fabAddAppointment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

    <!-- BOTÓN DE NUEVA CITA -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/fabAddAppointment"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="@dimen/spacing_16"
        android:contentDescription="@string/home_fab_add_description"
        android:background="@drawable/rounded_square_button"
        app:icon="@drawable/ic_add"
        app:iconTint="@color/white"
        app:backgroundTint="@color/pink_accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
